post design finished

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -29,8 +29,8 @@
             Filter
         </span>
     </div>
-    <div class="post-wrap">
-        <div class="post">
+    <div class="post">
+        <div class="post-detail d-flex">
             <div class="p-header">
                 <div class="p-title">
                     <span>Odin the Omnipotent</span>
@@ -52,55 +52,7 @@
                 <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
             </div>
         </div>
-    </div>
-    <div class="post-wrap">
-        <div class="post">
-            <div class="p-header">
-                <div class="p-title">
-                    <span>Davy Jones</span>
-                </div>
-                <div class="p-menu">
-                <i class="bi bi-three-dots p-menubtn"></i>
-                </div>
-            </div>
-            <div class="p-body">
-                Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
-            </div>
-            <div class="p-footer">
-                <i class="bi bi-hand-thumbs-up p-likebtn"></i>
-                <span class="p-likes">4878</span>
-                <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
-                <span class="p-rate">8.6/10</span>
-
-                <span class="p-username">TrashyTrash</span>
-                <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
-            </div>
-        </div>
-    </div>
-    <div class="post-wrap">
-        <div class="post d-none">
-            <div class="p-header">
-                <div class="p-title">
-                    <span>Davy Jones</span>
-                </div>
-                <div class="p-menu">
-                <i class="bi bi-three-dots p-menubtn"></i>
-                </div>
-            </div>
-            <div class="p-body">
-                Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
-            </div>
-            <div class="p-footer">
-                <i class="bi bi-hand-thumbs-up p-likebtn"></i>
-                <span class="p-likes">4878</span>
-                <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
-                <span class="p-rate">8.6/10</span>
-
-                <span class="p-username">TrashyTrash</span>
-                <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
-            </div>
-        </div>
-        <div class="post-menu d-flex">
+        <div class="post-menu d-none">
             <div class="pd-details">
                 <span class="pd-heading">
                     Tags
@@ -124,7 +76,126 @@
             </div>
             <div class="pd-right">
                 <div class="pd-close">
-                    <i class="bi bi-x-lg"></i>
+                    <i class="bi bi-x-lg pd-closebtn"></i>
+                </div>
+                <div class="pd-actions">
+                    <button type="button" class="pd-saved">Save</button>
+                    <button type="button">Share</button>
+                    <button type="button">Report</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="post">
+        <div class="post-detail d-flex">
+            <div class="p-header">
+                <div class="p-title">
+                    <span>Davy Jones</span>
+                </div>
+                <div class="p-menu">
+                <i class="bi bi-three-dots p-menubtn"></i>
+                </div>
+            </div>
+            <div class="p-body">
+                Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
+            </div>
+            <div class="p-footer">
+                <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                <span class="p-likes">4878</span>
+                <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                <span class="p-rate">8.6/10</span>
+
+                <span class="p-username">TrashyTrash</span>
+                <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+            </div>
+        </div>
+        <div class="post-menu d-none">
+            <div class="pd-details">
+                <span class="pd-heading">
+                    Tags
+                </span>
+                <div class="pd-tags">
+                    <span>Action</span>
+                    <span>Comedy</span>
+                    <span>Mystery</span>
+                    <span>Fantasy</span>
+                    <span>Romance</span>
+                    <span>Western</span>
+                </div>
+                <div class="pd-type">
+                    <span class="pd-heading">Type:</span>
+                    <span class="pd-value">Fanfiction</span>
+                </div>
+                <div class="pd-language">
+                    <span class="pd-heading">Language:</span>
+                    <span class="pd-value">English</span>
+                </div>
+            </div>
+            <div class="pd-right">
+                <div class="pd-close">
+                    <i class="bi bi-x-lg pd-closebtn"></i>
+                </div>
+                <div class="pd-actions">
+                    <button type="button" class="pd-saved">Save</button>
+                    <button type="button">Share</button>
+                    <button type="button">Report</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="post">
+        <div class="post-detail d-flex">
+            <div class="p-header">
+                <div class="p-title">
+                    <span>Davy Jones</span>
+                </div>
+                <div class="p-menu">
+                    <i class="bi bi-three-dots p-menubtn"></i>
+                </div>
+            </div>
+            <div class="p-body">
+                Jones fell in love with the goddess Calypso. He agreed to guide the dead but Calypso was a bi*ch. When he returned from duty, she was not there.
+            </div>
+            <div class="p-footer">
+                <i class="bi bi-hand-thumbs-up p-likebtn"></i>
+                <span class="p-likes">4878</span>
+                <i class="bi bi-hand-thumbs-down p-dislikebtn"></i>
+                <span class="p-rate">8.6/10</span>
+
+                <span class="p-username">TrashyTrash</span>
+                <img src="https://uybor.uz/borless/avtobor/img/user-images/user_no_photo_300x300.png">
+            </div>
+        </div>
+        <div class="post-menu d-none">
+            <div class="pd-details">
+                <span class="pd-heading">
+                    Tags
+                </span>
+                <div class="pd-tags">
+                    <span>Action</span>
+                    <span>Comedy</span>
+                    <span>Mystery</span>
+                    <span>Fantasy</span>
+                    <span>Romance</span>
+                    <span>Western</span>
+                </div>
+                <div class="pd-type">
+                    <span class="pd-heading">Type:</span>
+                    <span class="pd-value">Fanfiction</span>
+                </div>
+                <div class="pd-language">
+                    <span class="pd-heading">Language:</span>
+                    <span class="pd-value">English</span>
+                </div>
+            </div>
+            <div class="pd-right">
+                <div class="pd-close">
+                    <i class="bi bi-x-lg pd-closebtn"></i>
                 </div>
                 <div class="pd-actions">
                     <button type="button" class="pd-saved">Save</button>
