--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -19,13 +19,13 @@
 <div class="posts-cont">
     <div class="post-options">
         <div class="po-orderby">
-            <p class="orderby-btn p-option">Order By</p>
+            <p class="orderby-btn po-option">Order By</p>
             <p class="orderby-value">(Recent)</p>
         </div>
-        <span class="po-type p-option">
+        <span class="po-type po-option">
             Type
         </span>
-        <span class="po-filters p-option">
+        <span class="po-filters po-option">
             Filter
         </span>
     </div>
@@ -36,7 +36,7 @@
                     <span>Odin the Omnipotent</span>
                 </div>
                 <div class="p-menu">
-                <i class="bi bi-three-dots"></i>
+                <i class="bi bi-three-dots p-menubtn"></i>
                 </div>
             </div>
             <div class="p-body">
