--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -15,11 +15,10 @@ main{
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 6px;
+        padding: 10px;
         //color: $textcolor;
-        .p-option{
+        .po-option{
             font-size: 1.6rem;
-            padding: 10px;
             text-shadow: 0px 0px 6px $textcolor_boxshadow;
             font-family: 'Josefin Sans', sans-serif;
             cursor: pointer;
@@ -31,9 +30,9 @@ main{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            align-items: center;
+            align-items: baseline;
             .orderby-btn{
-                margin-right: 6px;
+                margin-right: 16px;
             }
             .orderby-value{
                 font-size: 1.2rem;
@@ -44,7 +43,7 @@ main{
         }
         .po-type{
             margin-left: auto;
-            margin-right: 16px;
+            margin-right: 36px;
         }
     }
 }
@@ -250,6 +249,9 @@ main{
         background-color: $sitebgcolor !important;
         border-radius: 10px;
     }
+    .post-options{
+        padding: 20px 10px 10px !important;
+    }
 }
 
 // Large devices (desktops, 992px and up)
@@ -278,7 +280,7 @@ main{
     .orderby-value{
         display: none;
     }
-    .p-option{
+    .po-option{
         font-size: 1.3rem !important;
     }
 }
