--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -161,6 +161,7 @@ main{
     .pd-right{
         display: flex;
         flex-direction: column;
+        flex-shrink: 0;
         .pd-close{
             display: flex;
             justify-content: end;
@@ -206,6 +207,7 @@ main{
     flex-direction: column;
     width: 200px;
     margin:20px 20px 0 0;
+    flex-shrink: 0;
     .navcont-temp{
         display: flex;
         background-color: $sitebgcolor !important;
