some icon and text changes in posts

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -34,9 +34,10 @@
             <div class="p-header">
                 <div class="p-title">
                     <span>Odin the Omnipotent</span>
+                    <span class="p-date">27/07/022</span>
                 </div>
                 <div class="p-menu">
-                <i class="bi bi-three-dots p-menubtn"></i>
+                <i class="bi bi-caret-left p-menubtn"></i>
                 </div>
             </div>
             <div class="p-body">
@@ -76,7 +77,7 @@
             </div>
             <div class="pd-right">
                 <div class="pd-close">
-                    <i class="bi bi-x-lg pd-closebtn"></i>
+                    <i class="bi bi-caret-down pd-closebtn"></i>
                 </div>
                 <div class="pd-actions">
                     <button type="button" class="pd-saved">Save</button>
@@ -94,9 +95,10 @@
             <div class="p-header">
                 <div class="p-title">
                     <span>Davy Jones</span>
+                    <span class="p-date">27/07/022</span>
                 </div>
                 <div class="p-menu">
-                <i class="bi bi-three-dots p-menubtn"></i>
+                <i class="bi bi-caret-left p-menubtn"></i>
                 </div>
             </div>
             <div class="p-body">
@@ -136,7 +138,7 @@
             </div>
             <div class="pd-right">
                 <div class="pd-close">
-                    <i class="bi bi-x-lg pd-closebtn"></i>
+                    <i class="bi bi-caret-down pd-closebtn"></i>
                 </div>
                 <div class="pd-actions">
                     <button type="button" class="pd-saved">Save</button>
@@ -153,9 +155,10 @@
             <div class="p-header">
                 <div class="p-title">
                     <span>Davy Jones</span>
+                    <span class="p-date">27/07/022</span>
                 </div>
                 <div class="p-menu">
-                    <i class="bi bi-three-dots p-menubtn"></i>
+                    <i class="bi bi-caret-left p-menubtn"></i>
                 </div>
             </div>
             <div class="p-body">
@@ -195,7 +198,7 @@
             </div>
             <div class="pd-right">
                 <div class="pd-close">
-                    <i class="bi bi-x-lg pd-closebtn"></i>
+                    <i class="bi bi-caret-down pd-closebtn"></i>
                 </div>
                 <div class="pd-actions">
                     <button type="button" class="pd-saved">Save</button>
