--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -64,15 +64,24 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .post-detail .p-header .p-title {
   padding: 10px;
   font-family: "Josefin Sans", sans-serif;
   font-weight: 600;
 }
+.post-detail .p-header .p-title span {
+  vertical-align: middle;
+}
 .post-detail .p-header .p-title span:hover {
   text-decoration: underline;
+}
+.post-detail .p-header .p-title .p-date {
+  margin-left: 6px;
+  color: #bababa;
+  font-size: 0.7rem;
+  font-family: "Gudea";
 }
 .post-detail .p-header .p-menu {
   display: flex;
@@ -150,7 +159,7 @@ main {
 .post-menu .pd-details .pd-tags {
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
-  margin: 5px 0 8px;
+  margin-bottom: 8px;
   padding: 0 4px;
 }
 .post-menu .pd-details .pd-tags span {
@@ -168,7 +177,7 @@ main {
   display: flex;
   justify-content: end;
   padding: 4px 10px;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 .post-menu .pd-right .pd-close i {
   cursor: pointer;
