--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -3,6 +3,7 @@
 $sitebgcolor: #1D1D1D;
 $frontbgcolor: #313131;
 $textcolor:#ffffff;
+$textcolor2:#bababa;
 $searchplaceholdercolor: #939393;
 
 $textcolor_hover1: #cccccc;
