--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -105,6 +105,7 @@ main{
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        flex-flow: wrap;
         i{
             font-size: 1.2rem;
             cursor: pointer;
@@ -117,12 +118,11 @@ main{
             padding: 0 8px;
         }
         .p-rate{
-            margin-right: auto;
-            padding-left: 20px;
+            padding: 0 20px;
+            flex-grow: 1;
         }
         .p-username{
             font-size: 0.8rem;
-            margin-left: auto;
             cursor: pointer;
             padding-right: 8px;
             &:hover{
