--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -283,7 +283,7 @@ header .header-wrap {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-left: 30px;
+  padding: 0 16px 0 30px;
   position: relative;
 }
 .account-cont .ppic-wrap {
@@ -322,10 +322,10 @@ header .header-wrap {
   transition: opacity 0.1s ease;
   position: absolute;
   top: 52px;
-  right: 0;
+  right: 16px;
   border-radius: 8px;
   background-color: #313131;
-  font-size: 2rem;
+  font-size: 1rem;
   font-family: "Itim", cursive;
   overflow: hidden;
   box-shadow: -1px 1px 6px 0px rgba(0, 0, 0, 0.2);
@@ -392,11 +392,12 @@ header .header-wrap {
   }
 }
 @media (min-width: 1200px) {
-  .logo-cont {
-    padding-left: 24px;
-  }
   .logo-cont span {
     font-size: 2.5rem;
+  }
+
+  .account-dropdown {
+    font-size: 1.6rem !important;
   }
 }
 @media (min-width: 360px) {
@@ -415,13 +416,5 @@ header .header-wrap {
 @media (min-width: 1300px) {
   .searchbar-wrap {
     max-width: 550px !important;
-  }
-
-  .drawerbtn-cont {
-    padding-left: 16px;
-  }
-
-  .header_right_section {
-    padding-right: 16px;
   }
 }/*# sourceMappingURL=site.css.map */
