orderby/type pop ups + class name fix

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -5,6 +5,74 @@
     }
 }
 
+<div class="orderby_type-cont orderby-popup">
+    <div class="obt-header">
+        <div class="obt-title">
+            <span>Order By</span>
+        </div>
+        <div class="obt-close sb-close">
+            <i class="bi bi-x-lg"></i>
+        </div>
+    </div>
+    <div class="obt-body">
+        <div class="obt-content">
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill visible"></i>
+                <span>Recent</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Oldest</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Rate</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Points</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="orderby_type-cont type-popup">
+    <div class="obt-header">
+        <div class="obt-title">
+            <span>Type</span>
+        </div>
+        <div class="obt-close t-close">
+            <i class="bi bi-x-lg"></i>
+        </div>
+    </div>
+    <div class="obt-body">
+        <div class="obt-content">
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill visible"></i>
+                <span>All</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Fanfiction</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Original</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Plot</span>
+            </div>
+            <div class="obt-item">
+                <i class="bi bi-caret-right-fill"></i>
+                <span>Scenerio</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <div class="nav-cont">
     <div class="navcont-temp">
 
@@ -37,7 +105,7 @@
                     <span class="p-date">27/07/022</span>
                 </div>
                 <div class="p-menu">
-                <i class="bi bi-caret-left p-menubtn"></i>
+                    <i class="bi bi-caret-left p-menubtn"></i>
                 </div>
             </div>
             <div class="p-body">
