--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -3,6 +3,7 @@ main {
   display: flex;
   flex-direction: row;
   color: #ffffff;
+  position: relative;
 }
 
 .posts-cont {
@@ -239,6 +240,62 @@ main {
   padding: 8px;
   width: 100%;
   height: 420px;
+}
+
+.orderby_type-cont {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 903;
+  position: absolute;
+  top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  background-color: #313131;
+  box-shadow: 0px 0px 6px 0px rgba(49, 49, 49, 0.3137254902);
+  flex-direction: column;
+  width: 240px;
+  border-radius: 20px;
+  font-family: "Itim", cursive;
+}
+.orderby_type-cont .obt-header {
+  width: 100%;
+  border-bottom: 2px solid #3b3b3b;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+.orderby_type-cont .obt-header .obt-title {
+  flex-grow: 1;
+  padding: 6px 0 6px 16px;
+  font-size: 1.6rem;
+}
+.orderby_type-cont .obt-header .obt-close {
+  flex-shrink: 0;
+  cursor: pointer;
+  padding: 6px 16px 4px 0;
+  font-size: 1.8rem;
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.3137254902);
+}
+.orderby_type-cont .obt-body {
+  padding: 6px 50px 10px;
+}
+.orderby_type-cont .obt-body .obt-content .obt-item {
+  position: relative;
+  padding: 6px 0;
+  font-size: 1.3rem;
+}
+.orderby_type-cont .obt-body .obt-content .obt-item i {
+  visibility: hidden;
+  font-size: 0.9rem;
+  position: absolute;
+  top: 2px;
+  bottom: 0;
+  left: -24px;
+  display: flex;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
