--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -4,6 +4,7 @@ main{
     display: flex;
     flex-direction: row;
     color: $textcolor;
+    position: relative;
 }
 
 .posts-cont{
@@ -247,6 +248,63 @@ main{
     }
 }
 
+
+
+.orderby_type-cont{
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 903;
+    position: absolute;
+    top: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    background-color: $frontbgcolor;
+    box-shadow: 0px 0px 6px 0px $frontbgcolor_boxshadow;
+    flex-direction: column;
+    width: 240px;
+    border-radius: 20px;
+    font-family: 'Itim', cursive;
+    .obt-header{
+        width: 100%;
+        border-bottom: 2px solid $frontbgcolor_hover4;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        .obt-title{
+            flex-grow: 1;
+            padding: 6px 0 6px 16px;
+            font-size: 1.6rem;
+        }
+        .obt-close{
+            flex-shrink: 0;
+            cursor: pointer;
+            padding: 6px 16px 4px 0;
+            font-size: 1.8rem;
+            text-shadow: 0px 0px 6px $textcolor_boxshadow;
+        }
+    }
+    .obt-body{
+        padding: 6px 50px 10px;
+        .obt-content .obt-item{
+            position: relative;
+            padding: 6px 0;
+            font-size: 1.3rem;
+            i{
+                visibility: hidden;
+                font-size: 0.9rem;
+                position: absolute;
+                top: 2px;
+                bottom: 0;
+                left: -24px;
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
+}
 
 
 
