--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -10,6 +10,7 @@ $textcolor_hover1: #cccccc;
 $frontbgcolor_hover1:#373737;
 $frontbgcolor_hover2:#4E4E4E;
 $frontbgcolor_hover3:#5e5e5e;
+$frontbgcolor_hover4:#3b3b3b;
 
 $textcolor_boxshadow:#ffffff50;
 $frontbgcolor_boxshadow:#31313150;
