--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -281,7 +281,7 @@ main{
         .obt-close{
             flex-shrink: 0;
             cursor: pointer;
-            padding: 6px 16px 4px 0;
+            padding: 6px 16px 4px 12px;
             font-size: 1.8rem;
             text-shadow: 0px 0px 6px $textcolor_boxshadow;
         }
@@ -301,6 +301,136 @@ main{
                 left: -24px;
                 display: flex;
                 align-items: center;
+            }
+        }
+    }
+}
+
+.filter-cont{
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 903;
+    position: absolute;
+    top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    background-color: $frontbgcolor;
+    box-shadow: 0px 0px 6px 0px $frontbgcolor_boxshadow;
+    flex-direction: column;
+    width: 260px;
+    border-radius: 20px;
+    font-family: 'Itim', cursive;
+    .f-header{
+        width: 100%;
+        border-bottom: 2px solid $frontbgcolor_hover4;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        .f-reset_cont{
+            flex-grow: 1;
+            padding: 12px 0 8px 14px;
+            font-size: 1.3rem;
+            #f-resetbtn{
+                border: none;
+                outline: none;
+                background-color: rgb(168, 75, 75);
+                color: #fff;
+                border-radius: 8px;
+                padding: 2px 40px;
+            }
+        }
+        .f-close{
+            flex-shrink: 0;
+            cursor: pointer;
+            padding: 6px 12px;
+            font-size: 1.8rem;
+            text-shadow: 0px 0px 6px $textcolor_boxshadow;
+        }
+    }
+    .f-body{
+        padding: 10px 12px;
+        .f-type_cont{
+            display: flex;
+            flex-wrap: wrap;
+            padding-bottom: 3px;
+            span{
+                font-size: 1.4rem;
+                margin: 0 10px 7px 0;
+            }
+            input{
+                font-size: 1.1rem;
+                margin: 0 10px 7px 0;
+                background-color: rgb(139, 136, 199);
+                color: $textcolor;
+                transition: background-color 0.2s;
+                outline: none;
+                border: none;
+                border-radius: 5px;
+                padding: 2px 8px;
+                &:hover{
+                    background-color: rgb(155, 153, 198);
+                }
+            }
+        }
+        .f-options{
+            display: flex;
+            flex-wrap: wrap;
+            padding-bottom: 3px;
+            select, .f-allow18 {
+                outline: none;
+                border: none;
+                background: $frontbgcolor_hover2;
+                color: $textcolor;
+                padding: 4px;
+                margin: 0 10px 7px 0;
+                border-radius: 5px;
+                font-size: 1.1rem;
+            }
+        }
+        .f-tagsbtn_cont{
+            display: flex;
+            justify-content: space-between;
+            padding: 2px 10px 10px;
+            font-size: 1.4rem;
+            input{
+                border: none;
+                outline: none;
+                color: #fff;
+                border-radius: 8px;
+                padding: 2px 12px;
+            }
+            .f-addtag{
+                background-color: #615ea1;
+            }
+            .f-removetag{
+                background-color: rgb(168, 75, 75);
+            }
+        }
+        .f-tags_include{
+            display: flex;
+            flex-wrap: wrap;
+            padding-bottom: 4px;
+            span{
+                background-color: #5c976d;
+                border-radius: 12px;
+                padding: 2px 8px;
+                margin: 0 5px 4px 0;
+                font-size: 0.9rem;
+            }
+        }
+        .f-tags_exclude{
+            display: flex;
+            flex-wrap: wrap;
+            padding-bottom: 4px;
+            span{
+                background-color: #77749f;
+                border-radius: 12px;
+                padding: 2px 8px;
+                margin: 0 5px 4px 0;
+                font-size: 0.9rem;
             }
         }
     }
@@ -328,6 +458,9 @@ main{
     .obt-content .obt-item i{
         //icon is normal after 768px
         top: 0 !important;
+    }
+    .filter-cont{
+        width: 340px;
     }
 }
 
@@ -359,5 +492,10 @@ main{
     }
     .po-option{
         font-size: 1.3rem !important;
+    }
+}
+@media (max-width: 260px) {
+    .filter-cont{
+        width: 100%;
     }
 }
