--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -473,6 +473,10 @@ main {
   }
 }
 @media (max-width: 260px) {
+  .orderby_type-cont {
+    width: 100%;
+  }
+
   .filter-cont {
     width: 100%;
   }
