--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -495,6 +495,9 @@ main{
     }
 }
 @media (max-width: 260px) {
+    .orderby_type-cont{
+        width: 100%;
+    }
     .filter-cont{
         width: 100%;
     }
