filter custom checkbox 1

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -115,9 +115,11 @@
                 <option value="3">Finished</option>
             </select>
             <div class="f-allow18">
-                <label>+18
+                <label>+18</label>
+                <div class="f-allow18check-cont">
                     <input type="checkbox" name="allow18">
-                </label>
+                    <span class="f-allow18custom"></span>
+                </div>
             </div>
             <select name="lastupdate">
                 <option value="0">Last update</option>
